--- a/app/src/main/res/menu/menu_animal_service_list.xml
+++ b/app/src/main/res/menu/menu_animal_service_list.xml
@@ -4,4 +4,8 @@
     tools:context="com.example.suryasolanki.dogbazaar.AnimalServiceList">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/Run"
+        android:orderInCategory="2"
+        android:title="Run"/>
 </menu>
